--- a/MeasurementsFormat.css
+++ b/MeasurementsFormat.css
@@ -5,8 +5,6 @@ img {
 body {
 	background-color: #363636;
 	color: #8a8a8a;
-	font-size: 22px;
-}
-div.a {
-	font-size: 40px;
+	font-size: 50px;
+	font-family: freak out go bananas;
 }
